# tutorial_fastapi

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
backend/app/: config.py  database.py  dependencies.py  main.py  schema.py
backend/app/routes/: auth.py  hello.py  user.py  vote.py
frontend/: package-lock.json  package.json  tailwind.config.js
frontend/src/: App.vue  main.js
frontend/src/components/: BaseLayout.vue  HelloWorld2.vue  LoginComponent.vue  SidebarComponent.vue  darkModeComponent.vue
frontend/src/router/: index.js
frontend/src/store/: darkModeStore.js  index.js  sidebarStore.js  tokenStore.js
frontend/src/store/modules/: darkMode.js  sideBar.js  token.js
frontend/src/views/: TokenView.vue  WhoamiView.vue
tutorial_fastapi/: main.py
tutorial_fastapi/app/: config.py  database.py  dependencies.py  main.py  schema.py
tutorial_fastapi/app/queries/: create_schema.sql
tutorial_fastapi/app/routes/: auth.py  post.py  user.py
