[tool.poetry]
name = "tutorial-fastapi"
version = "0.1.0"
description = ""
authors = ["Tutorial FastAPI [Youtube] <daniel.gil.romero24@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["all"], version = "^0.113.0"}
asyncpg = "^0.29.0"
asyncio = "^3.4.3"
pydantic-settings = "^2.4.0"
python-multipart = "^0.0.9"
pwdlib = {extras = ["argon2"], version = "^0.2.1"}
pyjwt = {extras = ["crypto"], version = "^2.9.0"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
